crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_224_snowflake_example.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('Snowflake', 224)\""
---
Ok(
    [
        "+----------------------------------------------------------+",
        "| sha2(Utf8(\"Snowflake\"),Int64(224))                       |",
        "+----------------------------------------------------------+",
        "| 6267d3d7a59929e6864dd4b737d98e3ef8569d9f88a7466647838532 |",
        "+----------------------------------------------------------+",
    ],
)
