crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_384_example.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('Snowflake', 384)\""
---
Ok(
    [
        "+--------------------------------------------------------------------------------------------------+",
        "| sha2(Utf8(\"Snowflake\"),Int64(384))                                                               |",
        "+--------------------------------------------------------------------------------------------------+",
        "| 736bd8a53845348830b1ee63a8cd3972f031f13b111f66ffdec2271a7ae709662e503a0ca305bd50da8d1ced48cd45d9 |",
        "+--------------------------------------------------------------------------------------------------+",
    ],
)
