crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_512_example.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('Snowflake', 512)\""
---
Ok(
    [
        "+----------------------------------------------------------------------------------------------------------------------------------+",
        "| sha2(Utf8(\"Snowflake\"),Int64(512))                                                                                               |",
        "+----------------------------------------------------------------------------------------------------------------------------------+",
        "| 6b367ad17625ddce95883945ca49903c2dae700ef134e0a0530d831c6a858b578e647c2a5fbedec97cef611e9a377e9d0ef9b3f9a598e883ba81cc2a99ae647b |",
        "+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
