crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_default_snowflake_example.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2('Snowflake')\""
---
Ok(
    [
        "+------------------------------------------------------------------+",
        "| sha2(Utf8(\"Snowflake\"))                                          |",
        "+------------------------------------------------------------------+",
        "| 1dbd59f661d68b90724f21084396b865497173e4d2714f4d91cf05fa5fc5e18d |",
        "+------------------------------------------------------------------+",
    ],
)
