crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_digest_size_lengths.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('test', 224) as hash_224,\n        LENGTH(sha2('test', 224)) as len_224,\n        sha2('test', 256) as hash_256,\n        LENGTH(sha2('test', 256)) as len_256,\n        sha2('test', 384) as hash_384,\n        LENGTH(sha2('test', 384)) as len_384,\n        sha2('test', 512) as hash_512,\n        LENGTH(sha2('test', 512)) as len_512\""
---
Ok(
    [
        "+----------------------------------------------------------+---------+------------------------------------------------------------------+---------+--------------------------------------------------------------------------------------------------+---------+----------------------------------------------------------------------------------------------------------------------------------+---------+",
        "| hash_224                                                 | len_224 | hash_256                                                         | len_256 | hash_384                                                                                         | len_384 | hash_512                                                                                                                         | len_512 |",
        "+----------------------------------------------------------+---------+------------------------------------------------------------------+---------+--------------------------------------------------------------------------------------------------+---------+----------------------------------------------------------------------------------------------------------------------------------+---------+",
        "| 90a3ed9e32b2aaf4c61c410eb925426119e1a9dc53d4286ade99a809 | 56      | 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08 | 64      | 768412320f7b0aa5812fce428dc4706b3cae50e02a64caa16a782249bfe8efc4b7ef1ccb126255d196047dfedf17a0a9 | 96      | ee26b0dd4af7e749aa1a8ee3c10ae9923f618980772e473f8819a5d4940e0db27ac185f8a0e1d5f84f88bc887fd67b143732c304cc5fa9ad8e6f57f50028a8ff | 128     |",
        "+----------------------------------------------------------+---------+------------------------------------------------------------------+---------+--------------------------------------------------------------------------------------------------+---------+----------------------------------------------------------------------------------------------------------------------------------+---------+",
    ],
)
