crates/embucket-functions/src/tests/string_binary/snapshots/sha2/query_sha2_hex_abcd0_example.snap
---
source: crates/embucket-functions/src/tests/string_binary/sha2.rs
description: "\"SELECT sha2_hex('AbCd0')\""
---
Ok(
    [
        "+------------------------------------------------------------------+",
        "| sha2(Utf8(\"AbCd0\"))                                              |",
        "+------------------------------------------------------------------+",
        "| e1d8ba27889d6782008f495473278c4f071995c5549a976e4d4f93863ce93643 |",
        "+------------------------------------------------------------------+",
    ],
)
